--- a/index.html
+++ b/index.html
@@ -68,8 +68,9 @@
             margin-bottom: 20px;
         }
 
+        /* Botón de llamada a la acción */
         .cta-button {
-            background-color: #25d366; /* Color de WhatsApp */
+            background-color: #8e44ad; /* Color violeta */
             color: white;
             padding: 15px 30px;
             font-size: 1.2em;
@@ -84,7 +85,7 @@
         }
 
         .cta-button:hover {
-            background-color: #128c7e; /* Color más oscuro al pasar el cursor */
+            background-color: #732d91; /* Color más oscuro de violeta al pasar el cursor */
         }
     </style>
 </head>
@@ -93,18 +94,13 @@
     <div class="container">
         <h1>¡Bienvenido a tu Bono Mega Bonus!</h1>
         <p>¿Estás listo para obtener tu bono del 200%? Solo haz clic en el siguiente botón y estarás un paso más cerca.</p>
-        <a href="https://wa.link/megabonus" class="cta-button" target="_blank" onclick="fbq('track', 'Contact');">Crea tu usuario ahora</a>
+        <a href="https://wa.link/megabonus" class="cta-button" target="_blank" onclick="fbq('track', 'Contact');">CARGA AHORA</a>
     </div>
 
     <!-- Barra fija (opcional) -->
     <div class="bono-bar" style="position: fixed; bottom: 0; left: 0; width: 100%; background-color: #16a34a; color: white; text-align: center; padding: 10px; font-weight: bold;">
         🎁 BONO ACTIVO - ¡Solicítalo ahora por WhatsApp!
     </div>
-
-    <!-- Código de seguimiento del Meta Pixel -->
-    <script>
-        // Este código ya está en el encabezado, pero puedes añadir eventos adicionales aquí si es necesario
-    </script>
 </body>
 
 </html>
