--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
     </noscript>
     <!-- End Meta Pixel Code -->
 
+    <!-- Importando la fuente Montserrat desde Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
+
     <style>
         * {
             box-sizing: border-box;
@@ -56,8 +59,11 @@
         }
 
         h1 {
+            font-family: 'Montserrat', sans-serif; /* Aplica la fuente Montserrat */
+            font-weight: bold; /* Negrita */
             font-size: 2.5em;
             margin-bottom: 20px;
+            letter-spacing: -2px; /* Ajuste del espaciado entre letras */
         }
 
         p {
