--- a/index.html
+++ b/index.html
@@ -2,241 +2,200 @@
 <html lang="es">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Landing Page - BONUS DE BIENVENIDA</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Landing Page - BONUS DE BIENVENIDA</title>
 
-    <!-- Meta Pixel Code de Damian -->
-    <script async>
-        !function(f, b, e, v, n, t, s) {
-            if(f.fbq) return; n=f.fbq=function(){n.callMethod ?
-            n.callMethod.apply(n, arguments) : n.queue.push(arguments)};
-            if(!f._fbq) f._fbq=n; n.push=n; n.loaded=!0; n.version='2.0';
-            n.queue=[]; t=b.createElement(e); t.async=!0;
-            t.src=v; s=b.getElementsByTagName(e)[0];
-            s.parentNode.insertBefore(t,s)
-        }(window, document,'script','https://connect.facebook.net/en_US/fbevents.js');
-        fbq('init', '635168062745954'); // Pixel de Meta de Damian
-        fbq('track', 'PageView');
-    </script>
-    <noscript>
-        <img height="1" width="1" style="display:none"
-            src="https://www.facebook.com/tr?id=635168062745954&ev=PageView&noscript=1" />
-    </noscript>
-    <!-- End Meta Pixel Code -->
+  <!-- Meta Pixel Code -->
+  <script>
+    !function(f,b,e,v,n,t,s){
+      if(f.fbq) return; n=f.fbq=function(){n.callMethod ? 
+      n.callMethod.apply(n, arguments) : n.queue.push(arguments)};
+      if(!f._fbq) f._fbq=n; n.push=n; n.loaded=!0; n.version='2.0';
+      n.queue=[]; t=b.createElement(e); t.async=!0;
+      t.src=v; s=b.getElementsByTagName(e)[0];
+      s.parentNode.insertBefore(t,s);
+    }(window, document, 'script', 'https://connect.facebook.net/en_US/fbevents.js');
+    
+    fbq('init', '635168062745954'); // Reemplaza con tu Pixel ID
+    fbq('track', 'PageView');
+  </script>
+  <noscript>
+    <img height="1" width="1" style="display:none"
+      src="https://www.facebook.com/tr?id=635168062745954&ev=PageView&noscript=1" />
+  </noscript>
+  <!-- End Meta Pixel Code -->
 
-    <!-- Importando la fuente Montserrat desde Google Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
 
-    <style>
-        * {
-            box-sizing: border-box;
-            margin: 0;
-            padding: 0;
-            font-family: 'Segoe UI', sans-serif;
-        }
+  <style>
+    * {
+        box-sizing: border-box;
+        margin: 0;
+        padding: 0;
+        font-family: 'Segoe UI', sans-serif;
+    }
 
-        body {
-            background-color: #ffffff;
-            color: #111b21;
-            margin: 0;
-            padding: 20px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            flex-direction: column;
-        }
+    body {
+        background-color: #ffffff;
+        color: #111b21;
+        margin: 0;
+        padding: 20px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        flex-direction: column;
+    }
 
-        .container {
-            text-align: center;
-            padding: 20px;
-            max-width: 600px;
-            margin: 20px;
-            background-color: white;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            border-radius: 8px;
-        }
+    .container {
+        text-align: center;
+        padding: 20px;
+        max-width: 600px;
+        margin: 20px;
+        background-color: white;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        border-radius: 8px;
+    }
 
-        h1 {
-            font-family: 'Montserrat', sans-serif; /* Aplica la fuente Montserrat */
-            font-weight: bold; /* Negrita */
-            font-size: 2.5em;
-            margin-bottom: 20px;
-            letter-spacing: -2px; /* Ajuste del espaciado entre letras */
-        }
+    h1 {
+        font-family: 'Montserrat', sans-serif; /* Fuente Montserrat */
+        font-weight: bold;
+        font-size: 2.5em;
+        margin-bottom: 20px;
+        letter-spacing: -2px; /* Menos espacio entre las letras */
+    }
 
-        p {
-            font-size: 1.2em;
-            margin-bottom: 20px;
-        }
+    p {
+        font-size: 1.2em;
+        margin-bottom: 20px;
+    }
 
-        .whatsapp-logo {
-            width: 50px;
-            margin-bottom: 20px;
-        }
+    .whatsapp-logo {
+        width: 50px;
+        margin-bottom: 20px;
+    }
 
-        .cta-button {
-            background-color: #25d366; /* Color de WhatsApp */
-            color: white;
-            padding: 15px 30px;
-            font-size: 1.2em;
-            font-weight: bold;
-            border: none;
-            border-radius: 25px;
-            text-decoration: none;
-            display: inline-block;
-            cursor: pointer;
-            margin-top: 20px;
-            transition: background-color 0.3s ease;
-        }
+    .cta-button {
+        background-color: #25d366; /* Color de WhatsApp */
+        color: white;
+        padding: 15px 30px;
+        font-size: 1.2em;
+        font-weight: bold;
+        border: none;
+        border-radius: 25px;
+        text-decoration: none;
+        display: inline-block;
+        cursor: pointer;
+        margin-top: 20px;
+        transition: background-color 0.3s ease;
+    }
 
-        .cta-button:hover {
-            background-color: #128c7e; /* Color más oscuro al pasar el cursor */
-        }
+    .cta-button:hover {
+        background-color: #128c7e; /* Color más oscuro al pasar el cursor */
+    }
 
-        footer {
-            text-align: center;
-            font-size: 13px;
-            color: #999;
-            margin-top: 60px;
-            padding-bottom: 80px;
-        }
+    footer {
+        text-align: center;
+        font-size: 13px;
+        color: #999;
+        margin-top: 60px;
+        padding-bottom: 80px;
+    }
 
-        /* Estilos para las notificaciones */
-        .xpo-notification-wrap {
-            position: fixed;
-            background: #1e1e1e;
-            color: #ffffff;
-            border-radius: 8px;
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
-            padding: 10px 14px;
-            display: flex;
-            align-items: center;
-            width: 280px;
-            z-index: 9999;
-            border: 1px solid #333;
-            backdrop-filter: blur(6px);
-            opacity: 0;
-            left: -300px;
-            bottom: 180px; /* Mover más abajo de la pantalla */
-            transition: all 0.5s ease;
-        }
+    /* Estilos para las notificaciones */
+    .xpo-notification-wrap {
+        position: fixed;
+        background: #1e1e1e;
+        color: #ffffff;
+        border-radius: 8px;
+        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+        padding: 10px 14px;
+        display: flex;
+        align-items: center;
+        width: 280px;
+        z-index: 9999;
+        border: 1px solid #333;
+        backdrop-filter: blur(6px);
+        opacity: 0;
+        left: -300px;
+        bottom: 180px; /* Mover más abajo de la pantalla */
+        transition: all 0.5s ease;
+    }
 
-        .xpo-notification-wrap.show {
-            left: 20px;
-            opacity: 1;
-        }
+    .xpo-notification-wrap.show {
+        left: 20px;
+        opacity: 1;
+    }
 
-        .xpo-img-wrap img {
-            width: 42px;
-            height: 42px;
-            border-radius: 6px;
-            object-fit: cover;
-            border: 1px solid #444;
-        }
+    .xpo-img-wrap img {
+        width: 42px;
+        height: 42px;
+        border-radius: 6px;
+        object-fit: cover;
+        border: 1px solid #444;
+    }
 
-        .xpo-col {
-            margin-left: 12px;
-        }
+    .xpo-col {
+        margin-left: 12px;
+    }
 
-        .xpo-notification-name {
-            font-weight: bold;
-            font-size: 0.9em;
-            color: #fff;
-        }
+    .xpo-notification-name {
+        font-weight: bold;
+        font-size: 0.9em;
+        color: #fff;
+    }
 
-        .xpo-notification-product {
-            font-size: 0.85em;
-            color: #22d3ee;
-        }
+    .xpo-notification-product {
+        font-size: 0.85em;
+        color: #22d3ee;
+    }
 
-        .xpo-location {
-            font-size: 0.75em;
-            color: #cbd5e1;
-        }
+    .xpo-location {
+        font-size: 0.75em;
+        color: #cbd5e1;
+    }
 
-        .xpo-location::before {
-            content: "📍";
-            margin-right: 4px;
-        }
+    .xpo-location::before {
+        content: "📍";
+        margin-right: 4px;
+    }
 
-    </style>
+  </style>
 </head>
 
 <body>
-    <!-- Contenedor principal -->
-    <div class="container">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp Logo" class="whatsapp-logo">
+  <!-- Contenedor principal -->
+  <div class="container">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp Logo" class="whatsapp-logo">
 
-        <h1>🎰 SUPER BONUS ACTIVO 🎰</h1>
-        <p>🏆 Encontra los mejores Sl0ts y atención 24 horas 🏆</p>
+      <h1>🎰 SUPER BONUS ACTIVO 🎰</h1>
+      <p>🏆 Encontra los mejores Sl0ts y atención 24 horas 🏆</p>
 
-        <a href="https://wa.link/megabonus" class="cta-button" target="_blank" onclick="fbq('track', 'Contact');">CHATEAR EN WHATSAPP</a>
-    </div>
+      <a href="https://wa.link/megabonus" class="cta-button" target="_blank" id="botónContactar">
+          CHATEAR EN WHATSAPP
+      </a>
+  </div>
 
-    <!-- Barra fija -->
-    <div class="bono-bar" style="position: fixed; bottom: 0; left: 0; width: 100%; background-color: #16a34a; color: white; text-align: center; padding: 10px; font-weight: bold;">
-        🎁 ¡Solicítalo ahora por WhatsApp!
-    </div>
+  <!-- Barra fija -->
+  <div class="bono-bar" style="position: fixed; bottom: 0; left: 0; width: 100%; background-color: #16a34a; color: white; text-align: center; padding: 10px; font-weight: bold;">
+      🎁 ¡Solicítalo ahora por WhatsApp!
+  </div>
 
-    <!-- Pie de página -->
-    <footer>
-        MEGA BONUS todos los derechos reservados.
-    </footer>
+  <!-- Pie de página -->
+  <footer>
+      MEGA BONUS todos los derechos reservados.
+  </footer>
 
-    <!-- Función para mostrar notificaciones -->
-    <script>
-        document.addEventListener("DOMContentLoaded", function () {
-            const config = {
-                productName: "GRACIAS POR CUMPLIR",
-                productImage: "https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg", // Imagen de ejemplo proporcionada
-                intervalo: 3, // Intervalo de notificaciones (en segundos)
-                duracion: 2, // Duración de cada notificación (en segundos)
-            };
-
-            const notifications = [
-                {
-                    name: "Silvia Monte",
-                    message: "Gracias por la atención que brindan!!",
-                    imageUrl: "https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" // Imagen para la primera notificación
-                },
-                {
-                    name: "Jose Gutierrez",
-                    message: "Tiene buenos juegos y buena gente",
-                    imageUrl: "https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" // Imagen para la segunda notificación
-                }
-            ];
-
-            function showNotification(notification) {
-                const noti = document.createElement("div");
-                noti.className = "xpo-notification-wrap";
-                noti.innerHTML = `
-                    <div class="xpo-img-wrap">
-                        <img src="${notification.imageUrl}" alt="Premio">
-                    </div>
-                    <div class="xpo-col">
-                        <div class="xpo-notification-name">${notification.name}</div>
-                        <div class="xpo-notification-product">${notification.message}</div>
-                    </div>
-                `;
-                document.body.appendChild(noti);
-                setTimeout(() => noti.classList.add("show"), 100);
-                setTimeout(() => {
-                    noti.classList.remove("show");
-                    setTimeout(() => noti.remove(), 500);
-                }, config.duracion * 1000);
-            }
-
-            // Mostrar las notificaciones de forma intercalada
-            let currentNotificationIndex = 0;
-            setInterval(function () {
-                showNotification(notifications[currentNotificationIndex]);
-                currentNotificationIndex = (currentNotificationIndex + 1) % notifications.length;
-            }, config.intervalo * 1000);
-        });
-    </script>
-
+  <!-- Función para disparar el evento Contact cuando el botón es clickeado -->
+  <script type="text/javascript">
+      document.getElementById('botónContactar').addEventListener('click', function() {
+          // Disparar el evento Contact de Meta Pixel
+          fbq('track', 'Contact');
+          // Aquí se puede abrir WhatsApp en una nueva pestaña
+          window.open('https://wa.link/megabonus', '_blank');
+      }, false);
+  </script>
 </body>
 
 </html>
